Added more info to kit's items