@@ -50,19 +50,31 @@ public class Swordsman extends FreeKit {
 
 		// Chestplate
 		es.chest = CSItemCreator.item(new ItemStack(Material.IRON_CHESTPLATE),
-				Component.text("Iron Chestplate", NamedTextColor.GREEN), null, null);
+				Component.text("Iron Chestplate", NamedTextColor.GREEN),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null);
 
 		// Leggings
 		es.legs = CSItemCreator.item(new ItemStack(Material.IRON_LEGGINGS),
-				Component.text("Iron Leggings", NamedTextColor.GREEN), null, null);
+				Component.text("Iron Leggings", NamedTextColor.GREEN),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null);
 
 		// Boots
 		es.feet = CSItemCreator.item(new ItemStack(Material.IRON_BOOTS),
-				Component.text("Iron Boots", NamedTextColor.GREEN), null, null);
+				Component.text("Iron Boots", NamedTextColor.GREEN),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN)), null);
 		// Voted Boots
 		es.votedFeet = CSItemCreator.item(new ItemStack(Material.IRON_BOOTS),
 				Component.text("Iron Boots", NamedTextColor.GREEN),
-				Collections.singletonList(Component.text("⁎ Voted: Depth Strider II", NamedTextColor.AQUA)),
+				List.of(Component.empty(),
+						Component.text(health + " HP", NamedTextColor.DARK_GREEN),
+						Component.text(regen + " Regen", NamedTextColor.DARK_GREEN),
+						Component.text("⁎ Voted: Depth Strider II", NamedTextColor.DARK_AQUA)),
 				Collections.singletonList(new Tuple<>(Enchantment.DEPTH_STRIDER, 2)));
 
 		// Ladders
